<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.poultry2.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.poultry2.ui.user.UserFragment"
        android:label="@string/nav_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_servers"
        android:name="com.example.poultry2.ui.server.ServerFragment"
        android:label="@string/nav_servers"
        tools:layout="@layout/fragment_server" />

    <fragment
        android:id="@+id/nav_sync"
        android:name="com.example.poultry2.ui.sync.SyncFragment"
        android:label="@string/nav_sync"
        tools:layout="@layout/fragment_sync"/>

    <fragment
        android:id="@+id/nav_downloadMap"
        android:name="com.example.poultry2.ui.downloadMap.DownloadMapFragment"
        android:label="@string/nav_downloadMap"
        tools:layout="@layout/fragment_download_map" />



</navigation>